--- a/apps/nano_planner/package.json
+++ b/apps/nano_planner/package.json
@@ -6,15 +6,22 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix_html": "file:deps/phoenix_html",
+    "popper.js": "^1.16.1",
+    "tether": "^1.4.7"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
-    "brunch": "2.7.4",
+    "brunch": "^2.10.17",
     "clean-css-brunch": "~2.0.0",
+    "copycat-brunch": "^1.1.1",
     "css-brunch": "~2.0.0",
     "javascript-brunch": "~2.0.0",
+    "sass-brunch": "^3.0.0",
     "uglify-js-brunch": "~2.0.1"
   }
 }
