--- a/apps/np_old/.gitignore
+++ b/apps/np_old/.gitignore
@@ -1,19 +1,19 @@
 # App artifacts
-/apps/nano_planner/_build
-/apps/nano_planner/db
-/apps/nano_planner/deps
-/apps/nano_planner/*.ez
+/_build
+/db
+/deps
+/*.ez
 
 # Generated on crash by the VM
-/apps/nano_planner/erl_crash.dump
+erl_crash.dump
 
 # Static artifacts
-/apps/nano_planner/node_modules
+/node_modules
 
 # Since we are building assets from web/static,
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
-/apps/nano_planner/priv/static/
+/priv/static/
 
 # The config/prod.secret.exs file by default contains sensitive
 # data and you should not commit it into version control.
@@ -21,4 +21,4 @@
 # Alternatively, you may comment the line below and commit the
 # secrets file as long as you replace its contents by environment
 # variables.
-/apps/nano_planner/config/prod.secret.exs
+/config/prod.secret.exs
