--- a/apps/nano_planner/assets/package.json
+++ b/apps/nano_planner/assets/package.json
@@ -6,8 +6,12 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.5.1",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "popper.js": "^1.16.1",
+    "tether": "^1.4.7"
   },
   "devDependencies": {
     "babel-brunch": "6.1.1",
