--- a/apps/nano_planner/assets/package.json
+++ b/apps/nano_planner/assets/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
@@ -17,6 +18,7 @@
     "babel-brunch": "6.1.1",
     "brunch": "2.10.9",
     "clean-css-brunch": "2.10.0",
+    "copycat-brunch": "^1.1.1",
     "sass-brunch": "^3.0.0",
     "uglify-js-brunch": "2.10.0"
   }
